fixed overflow issue

--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ body {
     display: flex;
     flex-direction: column;
     border-radius: 20px;
+    overflow-y: scroll;
 }
 
 .input-bar {
